# pvemanager

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  deploy.sh  docker-compose.yml  drizzle.config.ts  ecosystem.config.js  next.config.ts  package.json  pnpm-lock.yaml  start.bat  start.sh  test-db.ts
.github/workflows/: auto-fmt.yml  rust.yml
config/: config.toml
config/nginx/: pve-manager.conf
docs/: API.md  DEPLOYMENT.md
drizzle/: 0000_open_maelstrom.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
qdmz/: .gitignore  CHANGELOG.md  DEPLOY.md  EXCEL_FORMAT_GUIDE.md  README.md  admin.php  advanced_visualize.py  append_new_columns_merge.php  autoload_test.php  check_library.php  check_reader.php  complete_fix.php  complete_include_fix.php  composer.json  comprehensive_fix.php  comprehensive_include.php  debug.php  debug_data_structure.php  debug_index.php  debug_xlsx.php  deploy.php  detail_test.php  direct_include_fix.php  direct_xlsx_fix.php  enhanced_merge.php  error_test.php  excel_debug.php  excel_test.php  execute_fix.php  file_check.php  final_autoloader_fix.php  final_check.php  final_excel_test.php  final_include_fix.php  final_path_test.php  final_solution.php  final_test.php  fix_autoloader.php  fix_excel_reader.php  fixed_modern_merge.php  (+37 more)
scripts/: dev-fixed.sh  init-db.ts
server/: Cargo.toml
server/migrations/: init.sql
server/src/: config.rs  db.rs  handlers.rs  main.rs  middleware.rs  pve_client.rs  services.rs
server/src/handlers/: audit.rs  auth.rs  firewall.rs  stats.rs  vm.rs
shared/: Cargo.toml
src/db/: index.ts  (+1 more)
static/: index.html
(+60 files in other folders)
