[package]
name = "pve-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
reqwest.workspace = true
config.workspace = true
once_cell.workspace = true
pve-shared = { path = "../shared" }

# Additional dependencies
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }

